--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <div id="education">
       <h2>Education</h2>
       <p>Background</p>
-      <div>Major: Computer Engineering | GPA: 3.7/4.0 | Graduation: 2023</div>
+      <div>Major: Computer Engineering</div>
+      <div>Graduation: 2023</div>
       <p>Relevant Coursework</p>
       <ul>
         <li>Mathematics: Calculus I - III</li>
