--- a/index.html
+++ b/index.html
@@ -17,42 +17,23 @@
   <body>
     <!-- body element -->
     <h1>Ezekiel A. Mitchell</h1>
+    <h2> Creator • Adventurer • Student</h2>
 
     <image
       src="img/mee.png"
       alt="Ezekiel Mitchell"
       width="185"
       height="250"
-      class="img"
-    /><!-- end of image -->
+      class="img"></image>
+    <!-- end of image -->
 
     <div>
-      I'm a Marine Corps veteran pursuing a B.S. in computer engineering with
-      goals of contributing to the production of innovating technology in the
-      sustainable energy.
+      I'm a Marine Corps veteran studying computer engineering at the <a href="https://washington.edu" target="_blank">
+      University of Washington</a> with goals of contributing to the production of innovating technology in the
+      renewable energy sector.
     </div>
     <!-- end of about this website -->
 
-    <div id="contact">
-      <h2>Get in Touch</h2>
-      <div>
-        GitHub:
-        <a href="https://github.com/ezekielamitchell" target="_blank"
-          >Ezekielamitchell</a
-        >
-        | LinkedIn:
-        <a
-          href="https://www.linkedin.com/in/ezekiel-mitchell-576267127/"
-          target="_blank"
-          >Ezekiel A. Mitchell</a
-        >
-        | Email:
-        <a href="mailto:ezekiel@ezekielmitchell.io"
-          >Ezekiel@ezekielmitchell.io</a
-        >
-      </div>
-    </div>
-    <!-- end of contact -->
 
     <div id="about">
       <h2>About This Website & I</h2>
@@ -61,42 +42,33 @@
         the everyday changes in technology. I will be utilizing this website to
         increase my proficiency in HTML, CSS, and JavaScript. I will also use
         this website as a way to inform you, my audience, about what's taking
-        place in my educational life. So stay tuned!
+        place in my educational life.
       </div>
     </div>
     <!-- end of about -->
 
-    <div id="education">
-      <h2>Education</h2>
-      <p>Background</p>
-      <div>Major: Computer Engineering</div>
-      <div>Graduation: 2023</div>
-      <p>Relevant Coursework</p>
-      <ul>
-        <li>Mathematics: Calculus I - III</li>
-        <li>
-          Computer Science: Fundamentals of Computer Science I - II (Java)
-        </li>
-        <li>Physics: Engineering Psychics I</li>
-      </ul>
-      <p>Computing Languages & Tools</p>
-      <div>Java | C/C++ | HTML | CSS | GitHub</div>
-    </div>
-    <!--- end of education --->
 
-    <div id="projects">
-      <h2>Current Project(s)</h2>
-      <ol>
-        <li>Ticker1</li>
-        <div>
-          Ticker1 is a basic stock ticker that displays the current value of a
-          user searched stock. Ticker1 will be originally coded in java then
-          converted into C++ in order to utilize it with an Arduino display.
-        </div>
-      </ol>
+    <div id="contact">
+      <h2>Get in Touch</h2>
+      <div>
+        GitHub:
+        <a href="https://github.com/ezekielamitchell" target="_blank"
+        >Ezekielamitchell</a
+        >
+        | LinkedIn:
+        <a
+                href="https://www.linkedin.com/in/ezekiel-mitchell-576267127/"
+                target="_blank"
+        >Ezekiel A. Mitchell</a
+        >
+        | Email:
+        <a href="mailto:ezekielm@uw.edu"
+        >ezekielm@uw.edu</a
+        >
+      </div>
     </div>
-    <!-- end of projects -->
+    <!-- end of contact -->
 
-    <footer>Last updated on June 16, 2022</footer>
+    <footer>Last updated on August 28th, 2022</footer>
   </body>
 </html>
